hphp/hack/test/typecheck/xhp/xhp_modifier_banned.php.exp
File "xhp_modifier_banned.php", line 4, characters 5-5:
Encountered unexpected token 'XHP'. (Parsing[1002])
