hphp/hack/test/typecheck/xhp/xhp_modifier_banned.php
<?hh

// If the xhp keyword is not enabled by a flag this should be an error.
xhp class foo {}
